--- a/sample_app/Gemfile
+++ b/sample_app/Gemfile
@@ -1,6 +1,8 @@
 source "https://rubygems.org"
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
+ruby "3.1.1"
+
 gem "rails",                      "7.0.2.3"
 gem "image_processing",           "1.12.2"
 gem "active_storage_validations", "0.9.7"
@@ -9,18 +11,18 @@ gem "faker",                      "2.20.0"
 gem "will_paginate",              "3.3.1"
 gem "bootstrap-will_paginate",    "1.0.0"
 gem "bootstrap-sass",             "3.4.1"
+gem "sassc-rails",                "2.1.2"
 gem "sprockets-rails",            "3.4.2"
 gem "importmap-rails",            "1.0.3"
 gem "turbo-rails",                "1.0.1"
 gem "stimulus-rails",             "1.0.4"
 gem "jbuilder",                   "2.11.5"
-gem "puma",                       "5.6.2"
+gem "puma",                       "5.6.4"
 gem "bootsnap",                   "1.11.1", require: false
-gem "sassc-rails",                "2.1.2"
 
 group :development, :test do
-  gem "debug",   "1.4.0", platforms: %i[ mri mingw x64_mingw ]
   gem "sqlite3", "1.4.2"
+  gem "debug",   "1.4.0", platforms: %i[ mri mingw x64_mingw ]
 end
 
 group :development do
