--- a/toy_app/Gemfile
+++ b/toy_app/Gemfile
@@ -1,13 +1,16 @@
 source "https://rubygems.org"
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
+ruby "3.1.1"
+
 gem "rails",           "7.0.2.3"
+gem "sassc-rails",     "2.1.2"
 gem "sprockets-rails", "3.4.2"
 gem "importmap-rails", "1.0.3"
 gem "turbo-rails",     "1.0.1"
 gem "stimulus-rails",  "1.0.4"
 gem "jbuilder",        "2.11.5"
-gem "puma",            "5.6.2"
+gem "puma",            "5.6.4"
 gem "bootsnap",        "1.11.1", require: false
 
 group :development, :test do
@@ -29,7 +32,7 @@ group :production do
   gem "pg", "1.3.3"
 end
 
-# Windows does not include zoneinfo files, so bundle the tzinfo-data gem
+# Windows does not include zoneinfo files, so bundle the tzinfo-data gem.
 # Uncomment the following line if you're running Rails
 # on a native Windows system:
 # gem "tzinfo-data", platforms: [:mingw, :mswin, :x64_mingw, :jruby]
